--- a/views/card.hbs
+++ b/views/card.hbs
@@ -25,6 +25,11 @@
 
 <p><strong>Цена:</strong> <span class="price">{{price}}</span></p>
 
+<form action="/orders" method="POST">
+  <button type="submit" class="btn">Сделать заказ</button>
+
+</form>
+
 
 {{else}}
 
