--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -15,7 +15,9 @@
          <li> <a href="/course">Курсы</a> </li>
          {{/if}}
 
-         {{#if isAdd}}
+      {{#if isAuth}}
+
+           {{#if isAdd}}
         <li class="active"> <a href="/add">Добавить курс</a></li>
         {{else}}
         <li> <a href="/add">Добавить курс</a></li>
@@ -26,6 +28,22 @@
         {{else}}
         <li> <a href="/card">Корзина</a></li>
         {{/if}}
+
+         {{#if isOrder}}
+        <li class="active"> <a href="/orders">Заказы</a></li>
+        {{else}}
+        <li> <a href="/orders">Заказы</a></li>
+        {{/if}}
+            <li> <a href="/auth/logout">Выйти</a></li>
+
+       {{else}}
+          {{#if isLogin}}
+          <li class="active"> <a href="/auth/login#login">Войти</a></li>
+          {{else}}
+          <li> <a href="/auth/login#login">Войти</a></li>
+          {{/if}}
+       {{/if}}
+
       </ul>
     </div>
   </nav>
