add auth with new user

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -45,6 +45,13 @@
                 <span class="helper-text" data-error="Введите пароль" ></span>
             </div>
 
+              <div class="input-field ">
+                <input  id="name" name="name" type="text" class="validate" required>
+                <label for="name">Ваще имя</label>
+                <span class="helper-text" data-error="Введите имя" ></span>
+            </div>
+
+
 
             <button class="btn btn-primary" type="submit"> Зарегистрироваться</button>
 
